# plataforma_corretora

./: LICENSE  README.md
.devcontainer/: devcontainer.json
curso_streamlit/: README.md  pyproject.toml
curso_streamlit/config/: main.yaml
curso_streamlit/src/: main.py  regressao-linear-bovespa.py  requirements.txt
