[tool.poetry]
name = "plataforma-corretora"
version = "0.1.0"
description = "App Streamlit"
authors = ["Seu Nome <seu@email>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
streamlit = ">=1.36"
pandas = "2.2.3"
pandas-datareader = "0.10.0"
yfinance = ">=0.2.40"
numpy = ">=1.26"
requests = ">=2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
